# gaugeout2serial

./: CONTRIBUTING.md  README.md  pyproject.toml  test_bridge.py  test_cli_wrap.py  test_moza_r5_protocol.py  test_outgauge.py  test_protocol.py  test_r3e.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
gaugeout2serial/: __init__.py  bridge.py  cli.py  outgauge.py  protocol.py  telemetry.py  wheel.py
gaugeout2serial/devices/: __init__.py  base.py  discovery.py
gaugeout2serial/devices/moza_r5/: __init__.py  device.py
gaugeout2serial/sources/: __init__.py  base.py  outgauge.py  r3e.py
tools/: fake_r3e_sender.py
